--- a/public/index.html
+++ b/public/index.html
@@ -2,29 +2,62 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./build/tailwind.css">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./build/tailwind.css" />
     <title>E-Comm</title>
-
 </head>
 
 <body>
-    <div class="header py-5">
-        <div class="container m-auto px-4 flex items-center  gap-1">
-            <div class="flex py-3 px-3 border-[1px] grow border-searchborder rounded-md gap-3 items-center">
-                <img src="./assets/icon-search.svg" alt="Search Icon">
-                <input type="text" placeholder="Search Products" title="Search Products" class="outline-none w-full">
+    <!-- desktop viewport -->
+    <div class="container m-auto min-w-full px-4 hidden md:flex items-center justify-between py-5">
+        <!-- Header top  -->
+        <div>
+            <select name="lang" id="lang" class="border-0 bg-transparent text-textWhite outline-none text-[18px]">
+                <option value="eng">Eng</option>
+                <option value="ru">Rus</option>
+            </select>
+            <select name="usd" id="usd" class="border-0 bg-transparent outline-none text-textWhite text-[18px]">
+                <option value="usd">USD</option>
+                <option value="rubl">Rubl</option>
+            </select>
+        </div>
+        <div class="flex items-center gap-7">
+            <div class="flex items-center gap-1.5 cursor-pointer">
+                <img src="./assets/icon-user.svg" alt="User Icon" />
+                <span class="text-[18px] text-usercolor">My profile</span>
             </div>
-            <div class="cursor-pointer p-1 min-w-[24px] max-w-[50px]">
-                <img src="./assets/icon-hearth.svg" alt="Like Icon" class="w-full h-full">
+            <div class="inline-block cursor-pointer relative">
+                <span id="count"
+                    class="absolute top-0 r-0 w-4 h-4 bg-red-500 rounded-full flex items-center justify-center text-[13px] text-white hidden"></span>
+                <img src="./assets/icon-backet.svg" alt="Backet icon" />
             </div>
-            <div class="cursor-pointer p-1 min-w-[24px] max-w-[50px]">
-                <img src=" ./assets/icon-notification.svg" alt="Notification Icon" class="w-full h-full">
+            <span class="inline-block text-[18px] text-usercolor cursor-pointer">Items</span>
+            <div class="flex gap-1 items-center cursor-pointer">
+                <span class="text-[18px]cursor-pointer">$ 0.00</span>
+                <img src="./assets/icon-searchD.svg" alt="Search Icon" />
             </div>
         </div>
-
+    </div>
+    <!-- header mobile viewport -->
+    <div class="header py-5">
+        <div class="container m-auto min-w-full px-4 flex items-center gap-1 md:hidden md:invisible">
+            <div class="hidden sm:flex cursor-pointer mr-3">
+                <a href="index.html">
+                    <img src="./assets/logo.png" alt="logo Image" class="hidden sm:block" /></a>
+            </div>
+            <div class="flex py-3 px-3 border-[1px] grow border-searchborder rounded-md gap-3 items-center">
+                <img src="./assets/icon-search.svg" alt="Search Icon" />
+                <input type="text" placeholder="Search Products" title="Search Products" class="outline-none w-full" />
+            </div>
+            <div class="cursor-pointer p-1 min-w-[24px] max-w-[50px]">
+                <img src="./assets/icon-hearth.svg" alt="Like Icon" class="w-full h-full" />
+            </div>
+            <div class="cursor-pointer p-1 min-w-[24px] max-w-[50px]">
+                <img src=" ./assets/icon-notification.svg" alt="Notification Icon" class="w-full h-full" />
+            </div>
+        </div>
     </div>
 </body>
 
