--- a/public/index.html
+++ b/public/index.html
@@ -11,39 +11,53 @@
 
 <body>
     <!-- desktop viewport -->
-    <div
-        class="container  md:max-w-[1298px] md:px-5 m-auto min-w-full px-4 hidden md:flex items-center justify-between py-5 ">
-        <!-- Header top  -->
-        <div>
-            <select name="lang" id="lang" class="border-0 bg-transparent text-textWhite outline-none text-[18px]">
-                <option value="eng">Eng</option>
-                <option value="ru">Rus</option>
-            </select>
-            <select name="usd" id="usd" class="border-0 bg-transparent outline-none text-textWhite text-[18px]">
-                <option value="usd">USD</option>
-                <option value="rubl">Rubl</option>
-            </select>
-        </div>
-        <div class="flex items-center gap-7">
-            <div class="flex items-center gap-1.5 cursor-pointer">
-                <img src="./assets/icon-user.svg" alt="User Icon" />
-                <span class="text-[18px] text-usercolor">My profile</span>
+    <div class="border-b-[1px] border-b-headerbottom">
+        <div class="w-full max-w-[1298px] md:px-5 m-auto  px-4 hidden md:flex items-center justify-between py-5">
+            <!-- Header top  -->
+            <div>
+                <select name="lang" id="lang" class="border-0 bg-transparent text-textWhite outline-none text-[18px]">
+                    <option value="eng">Eng</option>
+                    <option value="ru">Rus</option>
+                </select>
+                <select name="usd" id="usd" class="border-0 bg-transparent outline-none text-textWhite text-[18px]">
+                    <option value="usd">USD</option>
+                    <option value="rubl">Rubl</option>
+                </select>
             </div>
-            <div class="inline-block cursor-pointer relative">
-                <span id="count"
-                    class="absolute top-0 r-0 w-4 h-4 bg-red-500 rounded-full flex items-center justify-center text-[13px] text-white hidden"></span>
-                <img src="./assets/icon-backet.svg" alt="Backet icon" />
-            </div>
-            <span class="inline-block text-[18px] text-usercolor cursor-pointer">Items</span>
-            <div class="flex gap-1 items-center cursor-pointer">
-                <span class="text-[18px]cursor-pointer">$ 0.00</span>
-                <img src="./assets/icon-searchD.svg" alt="Search Icon" />
+            <div class="flex items-center gap-7">
+                <div class="flex items-center gap-1.5 cursor-pointer">
+                    <img src="./assets/icon-user.svg" alt="User Icon" />
+                    <span class="text-[18px] text-usercolor">My profile</span>
+                </div>
+                <div class="inline-block cursor-pointer relative">
+                    <span id="count"
+                        class="absolute top-0 r-0 w-4 h-4 bg-red-500 rounded-full flex items-center justify-center text-[13px] text-white hidden"></span>
+                    <img src="./assets/icon-backet.svg" alt="Backet icon" />
+                </div>
+                <span class="inline-block text-[18px] text-usercolor cursor-pointer">Items</span>
+                <div class="flex gap-1 items-center cursor-pointer">
+                    <span class="text-[18px]cursor-pointer">$ 0.00</span>
+                    <img src="./assets/icon-searchD.svg" alt="Search Icon" />
+                </div>
             </div>
         </div>
     </div>
+    <!-- header navigation -->
+    <div class="w-full max-w-[1298px] m-auto px-4 hidden md:flex items-center justify-between py-5">
+        <div class="cursor-pointer">
+            <a href="index.html"> <img src="./assets/logo.png" alt="Logo Image" /></a>
+        </div>
+        <ul class="flex items-center gap-8 text-usercolor text-[18px]">
+            <li class="hover:text-hovertext transition-colors"><a href="#">HOME</a></li>
+            <li class="hover:text-hovertext transition-colors"><a href="#">BAGS</a></li>
+            <li class="hover:text-hovertext transition-colors"><a href="#">SNEAKERS</a></li>
+            <li class="hover:text-hovertext transition-colors"><a href="#">BELT</a></li>
+            <li class="hover:text-hovertext transition-colors"><a href="#">CONTACT</a></li>
+        </ul>
+    </div>
     <!-- header mobile viewport -->
-    <div class="header py-5 md:hidden md:invisible">
-        <div class="container m-auto min-w-full px-4 flex items-center gap-1 ">
+    <div class="header py-5 md:hidden md:invisible w-full max-w-[1298px] m-auto">
+        <div class="container m-auto min-w-full px-4 flex items-center gap-1">
             <div class="hidden sm:flex cursor-pointer mr-3">
                 <a href="index.html">
                     <img src="./assets/logo.png" alt="logo Image" class="hidden sm:block" /></a>
@@ -62,14 +76,14 @@
     </div>
     <!-- hero section -->
     <main
-        class="p-0 m-0 bg-[url('../assets/banner.png')] md:bg-[url('../assets/desktop-banner.png')] bg-no-repeat bg-cover bg-center">
-        <div class="w-full px-4 flex-col items-center  py-10 lg:max-w-[1298px]">
-            <div class="text-center text-white">
+        class="w-full p-0 m-0 bg-[url('../assets/banner.png')] md:bg-[url('../assets/desktop-banner.png')] bg-no-repeat bg-cover bg-center flex justify-start items-center">
+        <div class="px-5 flex-col py-10 w-full max-w-[1298px] m-auto">
+            <div class="items-start text-white">
                 <span
                     class="mb-8 text-[24px] inline-block font-bold text-white w-[200px] md:text-[64px] md:mt-[250px] md:w-[540px]">
                     Super Flash Sale 50% Off
                 </span>
-                <div class="flex justify-center">
+                <div class="flex md:hidden">
                     <span id="clock"
                         class="flex w-[42px] h-[42px] rounded-md bg-white text-textWhite items-center justify-center">09</span>
                     <span class="flex items-center mx-1">
@@ -85,7 +99,6 @@
                 </div>
             </div>
         </div>
-
     </main>
 </body>
 
