--- a/public/index.html
+++ b/public/index.html
@@ -100,6 +100,99 @@
             </div>
         </div>
     </main>
+    <!-- category section -->
+    <section class="w-full max-w-[1298px] m-auto px-4 py-[35px] md:hidden">
+        <div class="flex justify-between items-center">
+            <span class="text-brand text-[14px] font-bold">Category</span>
+            <span class="text-hovertext text-[14px] font-bold">More Category</span>
+        </div>
+        <div class="flex flex-nowrap justify-between overflow-x-auto mt-3 gap-5 w-full scrolblebar-hide">
+            <div
+                class="flex-col items-center justify-center w-full min-w-[70px] max-w-[120px] min-h-[108px] max-h-[180px]">
+                <span
+                    class="flex items-center justify-center rounded-full border-[1px] border-accent w-[70px] h-[70px] m-auto">
+                    <img src="./assets/icon-shirt.svg" alt="Shirt icon">
+                </span>
+                <span class="mt-2 text-cat text-[10px] flex items-center justify-center
+                ">Man Shirt</span>
+            </div>
+            <div
+                class="flex-col items-center justify-center w-full min-w-[70px] max-w-[120px] min-h-[108px] max-h-[180px]">
+                <span
+                    class="flex items-center justify-center rounded-full border-[1px] border-accent w-[70px] h-[70px] m-auto">
+                    <img src="./assets/icon-shirt.svg" alt="Shirt icon">
+                </span>
+                <span class="mt-2 text-cat text-[10px] flex items-center justify-center
+                ">Man Shirt</span>
+            </div>
+            <div
+                class="flex-col items-center justify-center w-full min-w-[70px] max-w-[120px] min-h-[108px] max-h-[180px]">
+                <span
+                    class="flex items-center justify-center rounded-full border-[1px] border-accent w-[70px] h-[70px] m-auto">
+                    <img src="./assets/icon-shirt.svg" alt="Shirt icon">
+                </span>
+                <span class="mt-2 text-cat text-[10px] flex items-center justify-center
+                ">Man Shirt</span>
+            </div>
+            <div
+                class="flex-col items-center justify-center w-full min-w-[70px] max-w-[120px] min-h-[108px] max-h-[180px]">
+                <span
+                    class="flex items-center justify-center rounded-full border-[1px] border-accent w-[70px] h-[70px] m-auto">
+                    <img src="./assets/icon-shirt.svg" alt="Shirt icon">
+                </span>
+                <span class="mt-2 text-cat text-[10px] flex items-center justify-center
+                ">Man Shirt</span>
+            </div>
+        </div>
+    </section>
+    <section class="w-full max-w-[1298px] m-auto px-4 py-[35px] flex mt-[-100px]">
+        <div
+            class="flex-col px-[29px] py-[25px] w-[427px] h-[358px] md:bg-[url('../assets/cardbg.png')] bg-no-repeat bg-cover bg-center">
+            <span class="w-[200px] block text-[20px] text-brand">FS - QUILTED MAXI CROSS BAG</span>
+            <span class="inline-block flex gap-2 text-[18px] text-cat  mt-[180px]">$534,33<span
+                    class="text-red font-bold no-underline">24%
+                    Off</span></span>
+            <span class="text-[30px] font-bold text-hovertext flex justify-end">$299,43</span>
+        </div>
+
+        <div
+            class="flex-col px-[29px] py-[25px] w-[427px] h-[358px] md:bg-[url('../assets/cardbg1.png')] bg-no-repeat bg-cover bg-center">
+            <span class="w-[180px] block text-[20px] text-brand">FS - QUILTED MAXI CROSS BAG</span>
+            <span class="text-[30px] font-bold text-hovertext flex justify-end items-start mt-[-60px]">$299,43</span>
+            <span
+                class="inline-block flex gap-2 text-[18px] text-cat  mt-[240px] m-auto flex justify-center">$534,33<span
+                    class="text-red font-bold no-underline">24%
+                    Off</span></span>
+        </div>
+        <div
+            class="flex-col px-[29px] py-[25px] w-[427px] h-[358px] md:bg-[url('../assets/cardbg2.png')] bg-no-repeat bg-cover bg-center">
+            <span class="w-[200px] block text-[20px] text-brand">FS - QUILTED MAXI CROSS BAG</span>
+            <span class="inline-block flex gap-2 text-[18px] text-cat  mt-[200px]">$534,33<span
+                    class="text-red font-bold no-underline">24%
+                    Off</span></span>
+            <span class="text-[30px] font-bold text-hovertext flex justify-end">$299,43</span>
+        </div>
+    </section>
+    <section class="w-full max-w-[1298px] m-auto px-4">
+        <h2 class="text-[35px] text-center mt-[50px] mb-8">BEST SELLER</h2>
+        <!-- tab  -->
+        <div>
+            <ul class="flex items-center justify-center gap-5 text-[18px] text-textWhite mb-7">
+                <li class="hover:text-hovertext cursor-pointer transition-colors">All</li>
+                <li class="hover:text-hovertext cursor-pointer transition-colors">Bags</li>
+                <li class="hover:text-hovertext cursor-pointer transition-colors">Sneakers</li>
+                <li class="hover:text-hovertext cursor-pointer transition-colors">Belt</li>
+                <li class="hover:text-hovertext cursor-pointer transition-colors">Sunglasses</li>
+            </ul>
+        </div>
+        <div id="products" class="grid grid-cols-3 md:grid-cols-4 gap-5">
+            <!-- Product Card -->
+
+            <!-- Repeat Product Card as needed -->
+
+        </div>
+    </section>
+    <script type="module" src="./js/main.js"></script>
 </body>
 
 </html>
