--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
 <body>
     <!-- desktop viewport -->
     <div class="border-b-[1px] border-b-headerbottom">
-        <div class="w-full max-w-[1298px] md:px-5 m-auto  px-4 hidden md:flex items-center justify-between py-5">
+        <div class="w-full max-w-[1298px] md:px-5 m-auto px-4 hidden md:flex items-center justify-between py-5">
             <!-- Header top  -->
             <div>
                 <select name="lang" id="lang" class="border-0 bg-transparent text-textWhite outline-none text-[18px]">
@@ -31,7 +31,7 @@
                 </div>
                 <div class="inline-block cursor-pointer relative">
                     <span id="count"
-                        class="absolute top-0 r-0 w-4 h-4 bg-red-500 rounded-full flex items-center justify-center text-[13px] text-white hidden"></span>
+                        class="absolute top-0 r-0 w-4 h-4 bg-red-500 rounded-full  items-center justify-center text-[13px] text-white hidden"></span>
                     <img src="./assets/icon-backet.svg" alt="Backet icon" />
                 </div>
                 <span class="inline-block text-[18px] text-usercolor cursor-pointer">Items</span>
@@ -45,14 +45,25 @@
     <!-- header navigation -->
     <div class="w-full max-w-[1298px] m-auto px-4 hidden md:flex items-center justify-between py-5">
         <div class="cursor-pointer">
-            <a href="index.html"> <img src="./assets/logo.png" alt="Logo Image" /></a>
+            <a href="index.html">
+                <img src="./assets/logo.png" alt="Logo Image" /></a>
         </div>
         <ul class="flex items-center gap-8 text-usercolor text-[18px]">
-            <li class="hover:text-hovertext transition-colors"><a href="#">HOME</a></li>
-            <li class="hover:text-hovertext transition-colors"><a href="#">BAGS</a></li>
-            <li class="hover:text-hovertext transition-colors"><a href="#">SNEAKERS</a></li>
-            <li class="hover:text-hovertext transition-colors"><a href="#">BELT</a></li>
-            <li class="hover:text-hovertext transition-colors"><a href="#">CONTACT</a></li>
+            <li class="hover:text-hovertext transition-colors">
+                <a href="#">HOME</a>
+            </li>
+            <li class="hover:text-hovertext transition-colors">
+                <a href="#">BAGS</a>
+            </li>
+            <li class="hover:text-hovertext transition-colors">
+                <a href="#">SNEAKERS</a>
+            </li>
+            <li class="hover:text-hovertext transition-colors">
+                <a href="#">BELT</a>
+            </li>
+            <li class="hover:text-hovertext transition-colors">
+                <a href="#">CONTACT</a>
+            </li>
         </ul>
     </div>
     <!-- header mobile viewport -->
@@ -111,37 +122,33 @@
                 class="flex-col items-center justify-center w-full min-w-[70px] max-w-[120px] min-h-[108px] max-h-[180px]">
                 <span
                     class="flex items-center justify-center rounded-full border-[1px] border-accent w-[70px] h-[70px] m-auto">
-                    <img src="./assets/icon-shirt.svg" alt="Shirt icon">
+                    <img src="./assets/icon-shirt.svg" alt="Shirt icon" />
                 </span>
-                <span class="mt-2 text-cat text-[10px] flex items-center justify-center
-                ">Man Shirt</span>
+                <span class="mt-2 text-cat text-[10px] flex items-center justify-center">Man Shirt</span>
             </div>
             <div
                 class="flex-col items-center justify-center w-full min-w-[70px] max-w-[120px] min-h-[108px] max-h-[180px]">
                 <span
                     class="flex items-center justify-center rounded-full border-[1px] border-accent w-[70px] h-[70px] m-auto">
-                    <img src="./assets/icon-shirt.svg" alt="Shirt icon">
+                    <img src="./assets/icon-shirt.svg" alt="Shirt icon" />
                 </span>
-                <span class="mt-2 text-cat text-[10px] flex items-center justify-center
-                ">Man Shirt</span>
+                <span class="mt-2 text-cat text-[10px] flex items-center justify-center">Man Shirt</span>
             </div>
             <div
                 class="flex-col items-center justify-center w-full min-w-[70px] max-w-[120px] min-h-[108px] max-h-[180px]">
                 <span
                     class="flex items-center justify-center rounded-full border-[1px] border-accent w-[70px] h-[70px] m-auto">
-                    <img src="./assets/icon-shirt.svg" alt="Shirt icon">
+                    <img src="./assets/icon-shirt.svg" alt="Shirt icon" />
                 </span>
-                <span class="mt-2 text-cat text-[10px] flex items-center justify-center
-                ">Man Shirt</span>
+                <span class="mt-2 text-cat text-[10px] flex items-center justify-center">Man Shirt</span>
             </div>
             <div
                 class="flex-col items-center justify-center w-full min-w-[70px] max-w-[120px] min-h-[108px] max-h-[180px]">
                 <span
                     class="flex items-center justify-center rounded-full border-[1px] border-accent w-[70px] h-[70px] m-auto">
-                    <img src="./assets/icon-shirt.svg" alt="Shirt icon">
+                    <img src="./assets/icon-shirt.svg" alt="Shirt icon" />
                 </span>
-                <span class="mt-2 text-cat text-[10px] flex items-center justify-center
-                ">Man Shirt</span>
+                <span class="mt-2 text-cat text-[10px] flex items-center justify-center">Man Shirt</span>
             </div>
         </div>
     </section>
@@ -149,9 +156,8 @@
         <div
             class="flex-col px-[29px] py-[25px] w-[427px] h-[358px] md:bg-[url('../assets/cardbg.png')] bg-no-repeat bg-cover bg-center">
             <span class="w-[200px] block text-[20px] text-brand">FS - QUILTED MAXI CROSS BAG</span>
-            <span class="inline-block flex gap-2 text-[18px] text-cat  mt-[180px]">$534,33<span
-                    class="text-red font-bold no-underline">24%
-                    Off</span></span>
+            <span class="flex gap-2 text-[18px] text-cat mt-[180px]">$534,33<span
+                    class="text-red font-bold no-underline">24% Off</span></span>
             <span class="text-[30px] font-bold text-hovertext flex justify-end">$299,43</span>
         </div>
 
@@ -159,17 +165,14 @@
             class="flex-col px-[29px] py-[25px] w-[427px] h-[358px] md:bg-[url('../assets/cardbg1.png')] bg-no-repeat bg-cover bg-center">
             <span class="w-[180px] block text-[20px] text-brand">FS - QUILTED MAXI CROSS BAG</span>
             <span class="text-[30px] font-bold text-hovertext flex justify-end items-start mt-[-60px]">$299,43</span>
-            <span
-                class="inline-block flex gap-2 text-[18px] text-cat  mt-[240px] m-auto flex justify-center">$534,33<span
-                    class="text-red font-bold no-underline">24%
-                    Off</span></span>
+            <span class="flex gap-2 text-[18px] text-cat mt-[240px] m-auto justify-center">$534,33<span
+                    class="text-red font-bold no-underline">24% Off</span></span>
         </div>
         <div
             class="flex-col px-[29px] py-[25px] w-[427px] h-[358px] md:bg-[url('../assets/cardbg2.png')] bg-no-repeat bg-cover bg-center">
             <span class="w-[200px] block text-[20px] text-brand">FS - QUILTED MAXI CROSS BAG</span>
-            <span class="inline-block flex gap-2 text-[18px] text-cat  mt-[200px]">$534,33<span
-                    class="text-red font-bold no-underline">24%
-                    Off</span></span>
+            <span class="flex gap-2 text-[18px] text-cat mt-[200px]">$534,33<span
+                    class="text-red font-bold no-underline">24% Off</span></span>
             <span class="text-[30px] font-bold text-hovertext flex justify-end">$299,43</span>
         </div>
     </section>
@@ -177,21 +180,88 @@
         <h2 class="text-[35px] text-center mt-[50px] mb-8">BEST SELLER</h2>
         <!-- tab  -->
         <div>
-            <ul class="flex items-center justify-center gap-5 text-[18px] text-textWhite mb-7">
-                <li class="hover:text-hovertext cursor-pointer transition-colors">All</li>
-                <li class="hover:text-hovertext cursor-pointer transition-colors">Bags</li>
-                <li class="hover:text-hovertext cursor-pointer transition-colors">Sneakers</li>
-                <li class="hover:text-hovertext cursor-pointer transition-colors">Belt</li>
-                <li class="hover:text-hovertext cursor-pointer transition-colors">Sunglasses</li>
+            <ul id="tab" class="flex items-center justify-center gap-5 text-[18px] text-textWhite mb-7">
+                <li id="tabItem" data-path="products"
+                    class="text-hovertext hover:text-hovertext cursor-pointer transition-colors">
+                    All
+                </li>
+                <li id="tabItem" data-path="women's clothing"
+                    class="hover:text-hovertext cursor-pointer transition-colors">
+                    Women's clothing
+                </li>
+                <li id="tabItem" data-path="men's clothing"
+                    class="hover:text-hovertext cursor-pointer transition-colors">
+                    Men's clothing
+                </li>
+                <li id="tabItem" data-path="jewelery" class="hover:text-hovertext cursor-pointer transition-colors">
+                    Jewelery
+                </li>
+                <li id="tabItem" data-path="electronics" class="hover:text-hovertext cursor-pointer transition-colors">
+                    Electronics
+                </li>
             </ul>
         </div>
         <div id="products" class="grid grid-cols-3 md:grid-cols-4 gap-5">
             <!-- Product Card -->
 
             <!-- Repeat Product Card as needed -->
-
         </div>
     </section>
+    <section class="mt-[100px] w-full max-w-[1298px] m-auto py-[40px] px-[150px] flex justify-between items-center">
+        <div class="flex flex-col items-center justify-center">
+            <img src="./assets/icon-shipping.svg" alt="Icon shipping" />
+            <span class="text-[27px] font-medium text-textWhite">FREE SHIPPING</span>
+        </div>
+        <div class="flex flex-col items-center justify-center">
+            <img src="./assets/icon-refund.svg" alt="Icon shipping" />
+            <span class="text-[27px] font-medium text-textWhite">100% REFUND</span>
+        </div>
+        <div class="flex flex-col items-center justify-center">
+            <img src="./assets/icon-call.svg" alt="Icon shipping" />
+            <span class="text-[27px] font-medium text-textWhite">SUPPORT 24/7</span>
+        </div>
+    </section>
+    <div class="w-full max-w-[1298px]  m-auto flex justify-center mt-[136px] mb-[60px]">
+        <div class="w-full max-w-[635px] bg-slate-300 rounded-lg flex border-2 border-bordersearch  flex-nowrap">
+            <input class="w-full outline-none pl-4" type="text" placeholder="Search query...">
+            <button class="text-white font-semibold text-[20px] py-[17px]  px-[27px] bg-hovertext">Search</button>
+        </div>
+    </div>
+    <footer class="w-full bg-bordersearch pt-[40px]">
+        <div class="w-full max-w-[1298px] m-auto px-4 py-10 bg-footerbg border-b-2 border-borderfooter">
+            <div class="flex justify-between items-baseline">
+                <div class="w-full max-w-[210px] flex-col gap-5 ">
+                    <img class="block" src="./assets/logo.png" alt="Logo Image" />
+                    <p class="text-[12px] text-textWhite">Lorem Ipsum is simply dummy text of the printing and
+                        typesetting
+                        industry. Lorem
+                        Ipsum has been the
+                        industry's standard dummy text ever.Since the 1500s, when an unknown printer.</p>
+                </div>
+                <div class="w-full max-w-[210px] flex-col gap-5 mt-10">
+                    <span class="text-textWhite text-[18px] font-semibold">Follow Us</span>
+                    <p class="text-[12px] text-textWhite mt-[19px]">Since the 1500s, when an unknown printer took a
+                        galley of type
+                        and scrambled.</p>
+                    <span class="flex gap-10 mt-6">
+                        <img src="./assets/icon-facebook.svg" alt="icon">
+                        <img src="./assets/icon-twiter.svg" alt="icon">
+                    </span>
+
+                </div>
+                <div class="w-full max-w-[210px] flex-col gap-5 mt-10">
+                    <span class="text-textWhite text-[18px] font-semibold">Contact Us</span>
+                    <p class="text-[12px] text-textWhite mt-[19px]">E-Comm , 4578 Marmora Road, Glasgow D04 89GR</p>
+                </div>
+            </div>
+        </div>
+        <div class="pt-3 flex justify-between w-full max-w-[1298px] m-auto pb-2">
+            <span class="text-textWhite">© 2025 Ecommerce theme by xojamurodov404gmail.com</span>
+            <div>
+                <img src="./assets/brands.png" alt="Brands imgs">
+            </div>
+        </div>
+    </footer>
     <script type="module" src="./js/main.js"></script>
 </body>
 
