--- a/public/index.html
+++ b/public/index.html
@@ -87,7 +87,7 @@
     </div>
     <!-- hero section -->
     <main
-        class="w-full p-0 m-0 bg-[url('../assets/banner.png')] md:bg-[url('../assets/desktop-banner.png')] bg-no-repeat bg-cover bg-center flex justify-start items-center">
+        class="bannerNone w-full p-0 m-0 bg-[url('../assets/banner.png')] md:bg-[url('../assets/desktop-banner.png')] bg-no-repeat bg-cover bg-center flex justify-start items-center">
         <div class="px-5 flex-col py-10 w-full max-w-[1298px] m-auto">
             <div class="items-start text-white">
                 <span
@@ -152,7 +152,7 @@
             </div>
         </div>
     </section>
-    <section class="w-full max-w-[1298px] m-auto px-4 py-[35px] flex mt-[-100px]">
+    <section class="megaSaleNone w-full max-w-[1298px] m-auto px-4 py-[35px] flex mt-[-100px]">
         <div
             class="flex-col px-[29px] py-[25px] w-[427px] h-[358px] md:bg-[url('../assets/cardbg.png')] bg-no-repeat bg-cover bg-center">
             <span class="w-[200px] block text-[20px] text-brand">FS - QUILTED MAXI CROSS BAG</span>
@@ -180,7 +180,7 @@
         <h2 class="text-[35px] text-center mt-[50px] mb-8">BEST SELLER</h2>
         <!-- tab  -->
         <div>
-            <ul id="tab" class="flex items-center justify-center gap-5 text-[18px] text-textWhite mb-7">
+            <ul id="tab" class="flex items-center justify-center gap-5 text-[18px] text-textWhite mb-9">
                 <li id="tabItem" data-path="products"
                     class="text-hovertext hover:text-hovertext cursor-pointer transition-colors">
                     All
@@ -201,30 +201,31 @@
                 </li>
             </ul>
         </div>
-        <div id="products" class="grid grid-cols-3 md:grid-cols-4 gap-5">
+        <div id="products" class="grid  grid-cols-1 sm:grid-cols-3 md:grid-cols-4 gap-5">
             <!-- Product Card -->
 
             <!-- Repeat Product Card as needed -->
         </div>
     </section>
     <section class="mt-[100px] w-full max-w-[1298px] m-auto py-[40px] px-[150px] flex justify-between items-center">
-        <div class="flex flex-col items-center justify-center">
+        <div class="flex flex-col items-center justify-center gap-5">
             <img src="./assets/icon-shipping.svg" alt="Icon shipping" />
             <span class="text-[27px] font-medium text-textWhite">FREE SHIPPING</span>
         </div>
-        <div class="flex flex-col items-center justify-center">
+        <div class="flex flex-col items-center justify-center gap-5">
             <img src="./assets/icon-refund.svg" alt="Icon shipping" />
             <span class="text-[27px] font-medium text-textWhite">100% REFUND</span>
         </div>
-        <div class="flex flex-col items-center justify-center">
+        <div class="flex flex-col items-center justify-center gap-5">
             <img src="./assets/icon-call.svg" alt="Icon shipping" />
             <span class="text-[27px] font-medium text-textWhite">SUPPORT 24/7</span>
         </div>
     </section>
     <div class="w-full max-w-[1298px]  m-auto flex justify-center mt-[136px] mb-[60px]">
         <div class="w-full max-w-[635px] bg-slate-300 rounded-lg flex border-2 border-bordersearch  flex-nowrap">
-            <input class="w-full outline-none pl-4" type="text" placeholder="Search query...">
-            <button class="text-white font-semibold text-[20px] py-[17px]  px-[27px] bg-hovertext">Search</button>
+            <input class="w-full outline-none pl-4 rounded-l-lg" type="text" placeholder="Search query...">
+            <button
+                class="text-white font-semibold text-[20px] py-[17px] rounded-r-lg px-[27px] bg-hovertext">Search</button>
         </div>
     </div>
     <footer class="w-full bg-bordersearch pt-[40px]">
@@ -263,6 +264,7 @@
         </div>
     </footer>
     <script type="module" src="./js/main.js"></script>
+    <script type="module" src="./js/wishlist.js"></script>
 </body>
 
 </html>
