adding basket counter func

--- a/public/index.html
+++ b/public/index.html
@@ -30,8 +30,8 @@
                     <span class="text-[18px] text-usercolor">My profile</span>
                 </div>
                 <div class="inline-block cursor-pointer relative openBasket">
-                    <span id="count"
-                        class="absolute top-0 r-0 w-4 h-4 bg-red-500 rounded-full  items-center justify-center text-[13px] text-white hidden"></span>
+                    <span
+                        class="absolute count top-0 r-0 w-4 h-4 bg-rose-500 rounded-full flex items-center justify-center text-[13px] text-white"></span>
                     <img src="./assets/icon-backet.svg" alt="Backet icon" />
                 </div>
                 <span id="itemLike" class="inline-block text-[18px] text-usercolor cursor-pointer">Items</span>
